--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -4,7 +4,6 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Print Greeting
-        run: echo "Hello World!"
-      - name: Print Goodbye
-        run: echo "Done - bye!!"
+     - run: |
+          echo "First output"
+          echo "Second output"
